@@ -28,4 +28,5 @@ Other:
 - Fix checking a project that contains several project file entries for the same file.
 - Fixed --file-filter matching of looked up files in provided paths.
 - Split up cstyleCast checker; dangerous casts produce portability/warning reports, safe casts produce style reports.
+- Removed deprecated '--showtime=' value 'top5'. Please use 'top5_file' or 'top5_summary' instead.
 -
